# ProcMon-CLI

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
GPUFix/: install_nvidia_drivers.py  nvidia_driver_diagnoser.py
src/procmon/: cli.py  collector.py  db.py  history.py
tests/: conftest.py  test_db.py
